--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.378.0",
     "next": "^14.2.3",
     "octokit": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
