--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "cp -r node_modules/@xenova/transformers/dist/ort-wasm.wasm public/",
+    "server": "ts-node --project src/server/tsconfig.json src/server/index.ts"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
@@ -18,13 +20,19 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/mdx": "^2.0.13",
+    "@xenova/transformers": "^2.17.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "googleapis": "^144.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.378.0",
     "next": "^14.2.3",
     "octokit": "^4.0.2",
+    "openai": "^4.67.1",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
@@ -32,9 +40,12 @@
     "remark-html": "^16.0.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
