--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "cp -r node_modules/@xenova/transformers/dist/ort-wasm.wasm public/",
-    "server": "ts-node --project src/server/tsconfig.json src/server/index.ts"
+    "server": "ts-node --project src/server/tsconfig.json src/server/index.ts",
+    "watch-blog": "ts-node src/server/blogWatcher.ts"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
@@ -21,6 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@types/mdx": "^2.0.13",
     "@xenova/transformers": "^2.17.2",
+    "chokidar": "^4.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -38,6 +40,7 @@
     "react-markdown": "^9.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "resend": "^4.0.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
