--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "^14.2.3",
     "octokit": "^4.0.2",
     "openai": "^4.67.1",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
