--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "googleapis": "^144.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.378.0",
-    "next": "^15.1.1-canary.0",
+    "next": "^14.2.3",
     "octokit": "^4.0.2",
     "openai": "^4.67.1",
     "radix-ui": "^1.0.1",
