--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@types/mdx": "^2.0.13",
     "@xenova/transformers": "^2.17.2",
     "chokidar": "^4.0.1",
@@ -39,6 +39,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "recharts": "^2.15.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "resend": "^4.0.1",
