--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "@supabase/supabase-js": "^2.49.1",
     "@types/mdx": "^2.0.13",
     "@xenova/transformers": "^2.17.2",
     "chokidar": "^4.0.1",
