Add new blog post: 38.md

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.174.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
