--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@supabase/supabase-js": "^2.49.1",
     "@types/mdx": "^2.0.13",
     "@xenova/transformers": "^2.17.2",
+    "axios": "^1.11.0",
+    "cheerio": "^1.0.0",
     "chokidar": "^4.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
